# libTesseract

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  exports.cpp  exports.h  main.cpp  sw.cpp
.github/workflows/: build.yml  linux-aarch64.yml  linux.yml  macos-aarch64.yml  macos.yml  test.yml  windows.yml
test/: test.lpi  test.pas
